@@ -39,6 +39,7 @@ Release 0.19.1 - Unreleased
                (Erik Holstad via Stack)
    HBASE-1240  Would be nice if RowResult could be comparable
                (Erik Holstad via Stack)
+   HBASE-1229   Apply HADOOP-5369 to HBase MapFile (Ben Maurer via Stack)
 
 Release 0.19.0
   INCOMPATIBLE CHANGES
